--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-numpy>=1.9.2
+numpy
 scikit-learn
-matplotlib>=1.4.3
+matplotlib
 pandas>=0.19
 streamlit
 opencv-python
 pillow
+opencv-contrib-python
